scrollbar fixed

--- a/style.css
+++ b/style.css
@@ -534,7 +534,7 @@ nav .follow svg {
     width: 100%;
   }
   .play-games-layout .play-ismal-img {
-    right: -11%;
+    right: -8%;
     width: 160px;
   }
   /* branding */
